Fixed responsiveness on mobile screens

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
 .app {
-    background-color: #111;
+  background-color: #111;
+}
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
+body {
+  background-color: #111;
+  height: 100%;
 }
