--- a/src/screens/LoginScreen.css
+++ b/src/screens/LoginScreen.css
@@ -68,7 +68,7 @@
   right: 20px;
   top: 17px;
   padding: 10px 20px;
-  border-radius: 0.85vw;
+  border-radius: 10px;
   font-size: 1rem;
   color: #000;
   background-color: #3b8df0;
@@ -94,7 +94,7 @@
   width: 30%;
   border: none;
   max-width: 600px;
-  border-radius: 0.4vw;
+  border-radius: 10px;
   color: #111;
   font-weight: 600;
   transition: transform 450ms;
@@ -116,7 +116,7 @@
   border: none;
   font-weight: 600;
   cursor: pointer;
-  border-radius: 0.4vw;
+  border-radius: 10px;
   transition: transform 450ms;
 }
 
